add further examples and mnemonic to try_catch.html

--- a/html/try_catch.html
+++ b/html/try_catch.html
@@ -167,6 +167,16 @@ try {
 
                     </ol>
                 </article> -->
+                <article>
+                    <h1 class="count">
+                        mnemonic
+                    </h1>
+                    <pre class="details-code-aclass">
+try catch(err) dotm dotn 
+
+(try catch (err) .message (description) .name (error name))
+                    </pre><!-- code-content -->
+                </article>
 
                 <article>
                     <h1 class="count">Code Example</h1>
@@ -253,6 +263,106 @@ I can continue,
                     </details><!--details CONSOLE -->
 
                 </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+try {
+
+  let data = JSON.parse('{name: "Sophie"}');
+  console.log(data.name);
+
+} catch (error) {
+
+  console.log("An error occurred:", error.message);
+  console.log("The errror is:", error.name);
+}</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+An error occured: 
+  Expected property name or '&rcub;' in JSON at position 1 (line 1 column 2)
+The error is: 
+  SyntaxError </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+An error occured: 
+  Expected property name or '&rcub;' in JSON at position 1 (line 1 column 2)
+The error is: 
+  SyntaxError </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+try {
+
+  let data = JSON.parse('{"name": "Sophie"}');
+  console.log(data.name);
+
+} catch (error) {
+
+  console.log("An error occurred:", error.message);
+  console.log("The errror is:", error.name);
+}
+  </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+Sophie</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+Sophie</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE THREE
+  </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT THREE (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT THREE (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+                <!--here-->
 
                 <article>
                     <h1 class="count">Notes</h1>
