add example to plus.html

--- a/html/plus.html
+++ b/html/plus.html
@@ -318,11 +318,11 @@ console.log(y)</pre><!-- code-content -->
                     </details><!--details CONSOLE -->
                 </article>
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
 What will be displayed after the execution of the next code block?
 
 a = 8;
@@ -336,75 +336,76 @@ console.log(c)
 3&rpar; 18
 4&rpar; 15
   </pre><!-- code-content -->
-    </details><!--details CODE-->
+                    </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+                    <br class="small-view">
+                    <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
 17 </pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
+                        <pre class="details-console-aclass wide-view">
 17 </pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+                    </details><!--details CONSOLE -->
 
-</article>
+                </article>
 
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
 INSERT CODE TWO
+let a = 1
+let b = 20
+console.log(a + ", " + b)
   </pre><!-- code-content -->
-    </details><!--details CODE-->
+                    </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+                    <br class="small-view">
+                    <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+1, 20 </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+1, 20 </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
 
-</article>
+                </article>
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
 INSERT CODE THREE
   </pre><!-- code-content -->
-    </details><!--details CODE-->
+                    </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+                    <br class="small-view">
+                    <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
 INSERT CONSOLE OUTPUT THREE (small view) 
 </pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
+                        <pre class="details-console-aclass wide-view">
 INSERT CONSOLE OUTPUT THREE (wide view) 
 </pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+                    </details><!--details CONSOLE -->
 
-</article>
+                </article>
                 <!--here-->
 
 
