add example to boolean.html

--- a/html/boolean.html
+++ b/html/boolean.html
@@ -419,8 +419,7 @@ true</pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE TWO
-  </pre><!-- code-content -->
+console.log(Boolean('false')) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -431,11 +430,9 @@ INSERT CODE TWO
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
+true</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
+true</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
