--- a/html/string_replace.html
+++ b/html/string_replace.html
@@ -109,8 +109,8 @@
             <pre class="details-code-aclass">
 const p = "I think Ruth's dog is cuter than your dog!";
 const p2 = paragraph.replace("dog","cat")
-p2
-p</pre><!-- code-content -->
+console.log(p2)
+console.log(p)</pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -134,9 +134,9 @@ p</pre><!-- code-content -->
 const p = "I think Ruth's dog is cuter than your dog!";
 const pnew =paragraph.replace(/(d..)/g,"$1gie")
 const pnewx =paragraph.replace(/d../g,"$&GIE")
-pnew
-p
-pnewx
+console.log(pnew)
+console.log(p)
+console.log(pnewx)
               </pre><!-- code-content -->
           </details><!--details CODE-->
 
@@ -166,8 +166,8 @@ pnewx
             <pre class="details-code-aclass">
 const p = "I think Ruth's dog is cuter than your dog!";
 const py = paragraph.replace("","Do ")
-py
-p </pre><!-- code-content -->
+console.log(py)
+console.log(p) </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -199,7 +199,8 @@ p </pre><!-- code-content -->
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-INSERT CODE TWO
+var text = 'this is an example string!';
+text.replace(/a/, "_")
               </pre><!-- code-content -->
           </details><!--details CODE-->
 
@@ -211,11 +212,9 @@ INSERT CODE TWO
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-              </pre><!-- small-view -->
+'this is _n example string!' </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-              </pre><!-- wide-view -->
+'this is _n example string!' </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
@@ -225,8 +224,8 @@ INSERT CONSOLE OUTPUT TWO (wide view)
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-INSERT CODE THREE
-              </pre><!-- code-content -->
+var text = 'this is an example string!';
+text.replace(/a/g,"_") </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -237,24 +236,13 @@ INSERT CODE THREE
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-              </pre><!-- small-view -->
+'this is _n ex_mple string!' </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-              </pre><!-- wide-view -->
+'this is _n ex_mple string!' </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
         <!--here-->
-
-        <article>
-          <h1 class="count">Notes</h1>
-
-          <ol>
-            <li>I am an item</li>
-          </ol>
-
-        </article>
 
         <article>
           <h1 class="count refs-heading">References</h1>
